syntax = "proto3";

option csharp_namespace = "ConfigurationService.ProtosLocation";
service LocationProtoService {
  rpc GetLocationByUId (Request) returns (Reply);  
}

message Request {
  string LocationUId = 1;
}

message Reply{	
	string Response = 1;	
}